# MicroColourGPT3000

./: LICENSE  README.md  about.html  app.js  generating-colour-palettes-randomly.html  index.html  paletteWorker.js  pickerColorData.js  style.css
article/: article.md
dataset/: dataset.csv  dataset.parquet
notebooks/: 00_colours_ai_microgpt.ipynb  01_colours_ai_microgpt_quantized_inference.ipynb  02_colour_clusters.ipynb  03_simple_random_palette_methods.ipynb  04_palette_extraction.ipynb  oklab.py  pyproject.toml
